# Synapse

./: README.md
contracts/ethereum/: EvmProxy.sol  UniCall.sol  UniProxy.sol  hardhat.config.ts  package-lock.json  package.json
contracts/relayer/: package-lock.json  package.json
contracts/solana/relayer-hub/programs/relayer-hub/: Cargo.toml
contracts/solana/relayer-hub/programs/relayer-hub/src/: lib.rs
contracts/solana/relayer-hub/programs/relayer-hub/src/errors/: error.rs
contracts/solana/relayer-hub/programs/relayer-hub/src/instructions/: initialize.rs  mod.rs  registration.rs  transaction_pool.rs
contracts/solana/relayer-hub/programs/relayer-hub/src/states/: hub.rs  mod.rs  relayer.rs  transaction.rs
contracts/solana/relayer-hub/programs/relayer-hub/src/utils/: message.rs
contracts/solana/relayer-hub/programs/relayer-ncn/: Cargo.toml
contracts/solana/relayer-hub/programs/relayer-ncn/src/: lib.rs
contracts/solana/relayer-offchain/: .gitignore  Cargo.toml  README.md  package.json
contracts/solana/relayer-offchain/.cargo/: config.toml  programs.env
contracts/solana/relayer-offchain/cli/: Cargo.toml
contracts/solana/relayer-offchain/cli/src/: args.rs  getters.rs  handler.rs  instructions.rs  lib.rs
contracts/solana/relayer-offchain/cli/src/keeper/: keeper_loop.rs  keeper_metrics.rs  keeper_state.rs  mod.rs
contracts/solana/relayer-offchain/clients/js/relayer_ncn/accounts/: ballotBox.ts  config.ts  counterAccount.ts  finalTransaction.ts  index.ts
contracts/solana/relayer-offchain/clients/js/relayer_ncn/errors/: relayerNcnProgram.ts
contracts/solana/relayer-offchain/clients/js/relayer_ncn/instructions/: adminRegisterStMint.ts  adminSetWeight.ts  castVote.ts  incrementCounter.ts  index.ts  initializeBallotBox.ts  initializeConfig.ts  initializeCounter.ts  initializeEpochSnapshot.ts  initializeOperatorSnapshot.ts  initializeVaultRegistry.ts  initializeWeightTable.ts  reallocBallotBox.ts  reallocOperatorSnapshot.ts  reallocVaultRegistry.ts  reallocWeightTable.ts  registerVault.ts  rollupTransaction.ts  sendTransaction.ts  snapshotVaultOperatorDelegation.ts
contracts/solana/relayer-offchain/clients/js/relayer_ncn/programs/: index.ts  relayerNcnProgram.ts
contracts/solana/relayer-offchain/clients/js/relayer_ncn/types/: epochAccountStatus.ts  index.ts  stMintEntry.ts
contracts/solana/relayer-offchain/clients/rust/relayer_hub/: Cargo.toml
contracts/solana/relayer-offchain/clients/rust/relayer_ncn/: Cargo.toml
contracts/solana/relayer-offchain/clients/rust/relayer_ncn/src/: lib.rs
contracts/solana/relayer-offchain/core/: Cargo.toml
contracts/solana/relayer-offchain/core/src/: ballot_box.rs  config.rs  constants.rs  discriminators.rs  epoch_snapshot.rs  epoch_state.rs  error.rs  final_transaction.rs  instruction.rs  lib.rs  loaders.rs  stake_weight.rs  utils.rs  vault_registry.rs  weight_entry.rs  weight_table.rs
contracts/solana/relayer-offchain/idl/: relayer_ncn_program.json
contracts/solana/relayer-offchain/integration_tests/: Cargo.toml
contracts/solana/relayer-offchain/integration_tests/tests/: tests.rs
contracts/solana/relayer-offchain/integration_tests/tests/fixtures/: mod.rs  relayer_hub_client.rs  relayer_ncn_client.rs  relayer_ncn_client_fix.rs  restaking_client.rs  test_builder.rs  vault_client.rs
contracts/solana/relayer-offchain/integration_tests/tests/offchain/: mod.rs  push_transaction.rs
contracts/solana/relayer-offchain/integration_tests/tests/offchain/bpf/: mod.rs  push_transaction.rs
contracts/solana/relayer-offchain/merkle_tree/: Cargo.toml
contracts/solana/relayer-offchain/program/: Cargo.toml
contracts/solana/relayer-offchain/program/src/: admin_register_st_mint.rs  admin_set_weight.rs  cast_vote.rs  initialize_ballot_box.rs  initialize_epoch_snapshot.rs  initialize_ncn_config.rs  initialize_operator_snapshot.rs  initialize_vault_registry.rs  initialize_weight_table.rs  lib.rs  realloc_ballot_box.rs  realloc_operator_snapshot.rs  realloc_vault_registry.rs  realloc_weight_table.rs  register_vault.rs  rollup_transaction.rs  send_transaction.rs  snapshot_vault_operator_delegation.rs
contracts/solana/relayer-offchain/relayer-ncn-operator-cli/: Cargo.toml
contracts/solana/relayer-offchain/relayer-ncn-operator-cli/src/: cli.rs  lib.rs  main.rs  process_epoch.rs  relayer_ncn.rs
contracts/solana/relayer-offchain/relayer_hub_sdk/: Cargo.toml
contracts/solana/relayer-offchain/relayer_hub_sdk/idls/: relayer_hub.json
contracts/solana/relayer-offchain/relayer_hub_sdk/src/: instruction.rs  lib.rs
contracts/solana/relayer-offchain/scripts/: generate-clients.js
contracts/solana/relayer-offchain/shank_cli/: Cargo.toml
contracts/solana/relayer-offchain/shank_cli/src/: main.rs
contracts/solana/relayer_solana/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
contracts/solana/relayer_solana/migrations/: deploy.ts
contracts/solana/relayer_solana/programs/nft_verification/: Cargo.toml
contracts/solana/relayer_solana/programs/nft_verification/src/: error.rs  instructions.rs  lib.rs  state.rs  utils.rs
contracts/solana/relayer_solana/programs/relayer_solana/: Cargo.toml
contracts/solana/relayer_solana/programs/relayer_solana/src/: context.rs  lib.rs
contracts/solana/relayer_solana/programs/relayer_solana/src/state/: foreign_emitter.rs
contracts/solana/relayer_solana/programs/stake/src/: lib.rs
contracts/solana/relayer_solana/programs/test/: Cargo.toml
contracts/solana/relayer_solana/programs/test/src/: lib.rs
contracts/solana/relayer_solana/programs/token_bridge_relayer/src/: lib.rs
contracts/solana/relayer_solana/tests/: relayer_solana.ts
relayer/: .gitignore  .prettierrc  package.json
relayer-metrics/: package-lock.json  package.json
relayer-metrics/src/: app.ts  log_storage.ts
relayer/idl/: NFT.json  UniProxy.json  nft_verification.json  relayer_hub.json  relayer_solana.json  solana.json
relayer/src/: app.ts  chain_worker.ts  consts.ts  controller.ts  encode_decode.ts  message_scan_worker.ts  message_storage.ts  message_worker.ts  mutex.ts  queue.ts  relayer_hub.ts  utils.ts  (+1 more)
(+52 files in other folders)
