[workspace]
members = [
    "programs/relayer_solana",
    "programs/proxy",
    "programs/test",
    "programs/stake",
    "programs/nft_verification"
    #    "programs/token_bridge_relayer",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
