[package]
name = "relayer-offchain-integration-tests"
edition = { workspace = true }

[dev-dependencies]
anchor-lang = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-restaking-core = { workspace = true }
jito-restaking-program = { workspace = true }
jito-restaking-sdk = { workspace = true }
jito-vault-core = { workspace = true }
jito-vault-program = { workspace = true }
jito-vault-sdk = { workspace = true }
shank = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
solana-security-txt = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-stake-pool = { workspace = true }
spl-token = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
relayer-ncn-client = { workspace = true }
relayer-ncn-program = { workspace = true }
relayer-hub-sdk = { workspace = true }

[dependencies]
relayer-ncn-client = { workspace = true }
log = "0.4.21"

