[package]
name = "merkle-tree"
description = "Merkle Tree"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
anchor-lang = {workspace = true}
borsh = { workspace = true }
bytemuck = { workspace = true }
fast-math = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shank = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-math = { workspace = true }
spl-token = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
solana-sdk = { workspace = true }
