[package]
name = "relayer-hub-sdk"
description = "SDK for interacting with relayer hub Program via declare_program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
anchor-lang = { workspace = true }
