[package]
name = "relayer-hub"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "relayer_hub"

[features]
default = ["testnet"]
testnet = ["wormhole-anchor-sdk/solana-devnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "wormhole-anchor-sdk/idl-build"]

[dependencies]
solana-program = "1.18.17"
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = {version = "0.30.1", features = ["metadata"]}
wormhole-anchor-sdk = { version = "0.30.1", git = "https://github.com/wormhole-foundation/wormhole-scaffolding", rev = "962ef4841697980474854edea192d26b01d27848", default-features = false }
wormhole-io = "0.1"
hex-literal = "0.4.1"
wormhole-raw-vaas = "0.3.0-alpha.1"
