[package]
name = "relayer-hub"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "relayer_hub"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
solana-program = "1.18.17"
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = {version = "0.30.1", features = ["metadata"]}
hex-literal = "0.4.1"
wormhole-raw-vaas = "0.3.0-alpha.1"
